2021年12月30日，v4.4.1版本发布: 1、新增水印打印功能 2、PDF限制功能进一步加强

--- a/server/src/main/resources/static/pdfjs/web/viewer.html
+++ b/server/src/main/resources/static/pdfjs/web/viewer.html
@@ -272,6 +272,22 @@ See https://github.com/adobe-type-tools/cmap-resources
                     <option title="" value="2" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 200 }'>200%</option>
                     <option title="" value="3" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 300 }'>300%</option>
                     <option title="" value="4" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 400 }'>400%</option>
+					<option title="" value="5" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 500 }'>500%</option>
+					<option title="" value="6" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 600 }'>600%</option>
+					<option title="" value="7" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 700 }'>700%</option>
+					<option title="" value="8" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 800 }'>800%</option>
+					<option title="" value="9" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 900 }'>900%</option>
+					<option title="" value="10" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 1000 }'>1000%</option>
+					<option title="" value="11" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 1500 }'>1500%</option>
+					<option title="" value="12" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 2000 }'>2000%</option>
+					<option title="" value="13" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 2500 }'>2500%</option>
+					<option title="" value="14" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 3000 }'>3000%</option>
+					<option title="" value="15" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 3500 }'>3500%</option>
+					<option title="" value="16" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 4000 }'>4000%</option>
+					<option title="" value="17" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 4500 }'>4500%</option>
+					<option title="" value="18" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 5000 }'>5000%</option>
+					<option title="" value="19" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 5500 }'>5500%</option>
+					<option title="" value="20" data-l10n-id="page_scale_percent" data-l10n-args='{ "scale": 6000 }'>6000%</option>
                   </select>
                 </span>
               </div>
