2022年1月1日，v4.4.2版本发布: 1、针对0KB的文件进行限制

--- a/server/src/main/resources/static/xlsx/index.html
+++ b/server/src/main/resources/static/xlsx/index.html
@@ -64,8 +64,8 @@
                                userInfo: false, // 右上角的用户信息展示样式
                                showRowBar: true, // 是否显示行号区域
                                showColumnBar: false, // 是否显示列号区域
-                               sheetFormulaBar: false, // 是否显示公式栏
-                               enableAddBackTop: false,//返回头部按钮
+                               sheetFormulaBar: true, // 是否显示公式栏
+                               enableAddBackTop: true,//返回头部按钮
                                 
                                     data:exportJson.sheets,
                                     title:exportJson.info.name,
