update server/src/main/resources/static/ofd/index.html. 修复OFD反代问题

--- a/server/src/main/resources/static/ofd/index.html
+++ b/server/src/main/resources/static/ofd/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>ofd.js</title>
-    <link href="/ofd/css/app.0ef57741.css" rel="preload" as="style" />
-    <link href="/ofd/css/chunk-vendors.a16c4353.css" rel="preload" as="style" />
-    <link href="/ofd/js/app.9d584a17.js" rel="preload" as="script" />
-    <link href="/ofd/js/chunk-vendors.239dd91c.js" rel="preload" as="script" />
-    <link href="/ofd/css/chunk-vendors.a16c4353.css" rel="stylesheet" />
-    <link href="/ofd/css/app.0ef57741.css" rel="stylesheet" />
+    <link href="ofd/css/app.0ef57741.css" rel="preload" as="style" />
+    <link href="ofd/css/chunk-vendors.a16c4353.css" rel="preload" as="style" />
+    <link href="ofd/js/app.9d584a17.js" rel="preload" as="script" />
+    <link href="ofd/js/chunk-vendors.239dd91c.js" rel="preload" as="script" />
+    <link href="ofd/css/chunk-vendors.a16c4353.css" rel="stylesheet" />
+    <link href="ofd/css/app.0ef57741.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
@@ -20,7 +20,7 @@
       ></noscript
     >
     <div id="app"></div>
-    <script src="/ofd/js/chunk-vendors.239dd91c.js"></script>
-    <script src="/ofd/js/app.9d584a17.js"></script>
+    <script src="ofd/js/chunk-vendors.239dd91c.js"></script>
+    <script src="ofd/js/app.9d584a17.js"></script>
   </body>
 </html>
