--- a/server/src/main/resources/static/ofd/index.html
+++ b/server/src/main/resources/static/ofd/index.html
@@ -1,26 +1,143 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>ofd.js</title>
-    <link href="css/app.0ef57741.css" rel="preload" as="style" />
-    <link href="css/chunk-vendors.a16c4353.css" rel="preload" as="style" />
-    <link href="js/app.9d584a17.js" rel="preload" as="script" />
-    <link href="js/chunk-vendors.239dd91c.js" rel="preload" as="script" />
-    <link href="css/chunk-vendors.a16c4353.css" rel="stylesheet" />
-    <link href="css/app.0ef57741.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but ofd.js doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-    <script src="js/chunk-vendors.239dd91c.js"></script>
-    <script src="js/app.9d584a17.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>ofd.js</title><script src="OfdParser.js"></script><script src="FreetypeKit.js"></script><link href="css/app.e6bfd87a.css" rel="preload" as="style"><link href="css/chunk-vendors.a16c4353.css" rel="preload" as="style"><link href="js/app.4e3c4068.js" rel="preload" as="script"><link href="js/chunk-vendors.013adbd4.js" rel="preload" as="script"><link href="css/chunk-vendors.a16c4353.css" rel="stylesheet"><link href="css/app.e6bfd87a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but ofd.js doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="js/chunk-vendors.013adbd4.js"></script><script src="js/app.4e3c4068.js"></script>
+
+
+<script>
+function getParam(url, name) {
+    try {
+        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+        var r = url.split('?')[1].match(reg);
+        if(r != null) {
+          return r[2];
+        }
+		
+        return "";//如果此处只写return;则返回的是undefined
+    } catch(e) {
+        return "";//如果此处只写return;则返回的是undefined
+    }
+}
+var url= window.location.href;
+var name="pdfXianzhi";
+var pdfXianzhid=getParam(url,name);
+if ('false' != pdfXianzhid) {
+	  
+  //屏蔽右键菜单
+document.oncontextmenu = function (event) {
+  if (window.event) {
+    event = window.event;
+  }
+  try {
+    var the = event.srcElement;
+    if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
+      return false;
+    }
+    return true;
+  } catch (e) {
+    return false;
+  }
+}
+//屏蔽粘贴
+document.onpaste = function (event) {
+  if (window.event) {
+    event = window.event;
+  }
+  try {
+    var the = event.srcElement;
+    if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
+      return false;
+    }
+    return true;
+  } catch (e) {
+    return false;
+  }
+}
+//屏蔽复制
+
+//屏蔽剪切
+document.oncut = function (event) {
+  if (window.event) {
+    event = window.event;
+  }
+  try {
+    var the = event.srcElement;
+    if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
+      return false;
+    }
+    return true;
+  } catch (e) {
+    return false;
+  }
+}
+//禁止f12
+
+function fuckyou() {
+  window.close(); //关闭当前窗口(防抽)
+  window.location = "about:blank"; //将当前窗口跳转置空白页
+}
+//禁止Ctrl+U
+var arr = [123, 17, 18];
+document.oncontextmenu = new Function("event.returnValue=false;"), //禁用右键
+
+  window.onkeydown = function (e) {
+    var keyCode = e.keyCode || e.which || e.charCode;
+    var ctrlKey = e.ctrlKey || e.metaKey;
+    console.log(keyCode + "--" + keyCode);
+    if (ctrlKey && keyCode == 85) {
+      e.preventDefault();
+    }
+    if (arr.indexOf(keyCode) > -1) {
+      e.preventDefault();
+    }
+  }
+
+function ck() {
+  console.profile();
+  console.profileEnd();
+  //我们判断一下profiles里面有没有东西，如果有，肯定有人按F12了，没错！！
+  if (console.clear) {
+    console.clear()
+  };
+  if (typeof console.profiles == "object") {
+    return console.profiles.length > 0;
+  }
+}
+
+function hehe() {
+  if ((window.console && (console.firebug || console.table && /firebug/i.test(console.table()))) || (
+      typeof opera ==
+      'object' && typeof opera.postError == 'function' && console.profile.length > 0)) {
+    fuckyou();
+  }
+  if (typeof console.profiles == "object" && console.profiles.length > 0) {
+    fuckyou();
+  }
+}
+hehe();
+window.onresize = function () {
+  if ((window.outerHeight - window.innerHeight) > 200)
+    //判断当前窗口内页高度和窗口高度，如果差值大于200，那么呵呵
+    fuckyou();
+}
+
+document.onkeydown = function (event) {
+  if ((event.keyCode == 112) || //屏蔽 F1
+    (event.keyCode == 113) || //屏蔽 F2
+    (event.keyCode == 114) || //屏蔽 F3
+    (event.keyCode == 115) || //屏蔽 F4
+    // (event.keyCode == 116) || //屏蔽 F5
+    (event.keyCode == 117) || //屏蔽 F6
+    (event.keyCode == 118) || //屏蔽 F7
+    (event.keyCode == 119) || //屏蔽 F8
+    (event.keyCode == 120) || //屏蔽 F9
+    (event.keyCode == 121) || //屏蔽 F10
+    (event.keyCode == 122) || //屏蔽 F11
+    (event.keyCode == 123)) //屏蔽 F12
+  {
+    return false;
+  }
+}
+window.onhelp = function () {
+  return false;
+}
+  } 
+	 </script>
+</body></html>
