--- a/server/src/main/resources/static/website/index.html
+++ b/server/src/main/resources/static/website/index.html
@@ -1,27 +1,179 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+<html> 
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Online 3D Viewer333</title>
-    <script type="text/javascript" src="three.min.js"></script>
-    <script type="text/javascript" src="o3dv.min.js"></script>
-    <script type='text/javascript'>
-        OV.Init3DViewerElements ();
+    <title>Online 3D Viewer</title>
+    <link rel="stylesheet" type="text/css" href="website/pickr.monolith.min.css">
+    <script type="text/javascript" src="website/pickr.es5.min.js"></script>
+    <script type="text/javascript" src="website/three.min.js"></script>
+    <script type="text/javascript" src="website/o3dv.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="website/o3dv.website.min.css">
+    <script type="text/javascript" src="website/o3dv.website.min.js"></script>
+    <script type="text/javascript">
+        window.addEventListener ('load', function () {
+            let website = new OV.Website ({
+                headerDiv : document.getElementById ('header'),
+                toolbarDiv : document.getElementById ('toolbar'),
+                mainDiv : document.getElementById ('main'),
+                introDiv : document.getElementById ('intro'),
+                fileNameDiv : document.getElementById ('main_file_name'),
+                navigatorDiv : document.getElementById ('main_navigator'),
+                navigatorSplitterDiv : document.getElementById ('main_navigator_splitter'),
+                sidebarDiv : document.getElementById ('main_sidebar'),
+                sidebarSplitterDiv : document.getElementById ('main_sidebar_splitter'),
+                viewerDiv : document.getElementById ('main_viewer'),
+                fileInput : document.getElementById ('open_file'),
+                eventHandler : window.viewerEventHandler
+            });
+            website.Load ();
+        });
+var url= window.location.href;
+var index = url .lastIndexOf("=");  
+var pdfXianzhid =url .substring(index + 1, url .length);
+//window.alert(pdfXianzhid);
+if ('false' != pdfXianzhid) {
+	  
+  //屏蔽右键菜单
+document.oncontextmenu = function (event) {
+  if (window.event) {
+    event = window.event;
+  }
+  try {
+    var the = event.srcElement;
+    if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
+      return false;
+    }
+    return true;
+  } catch (e) {
+    return false;
+  }
+}
+//屏蔽粘贴
+document.onpaste = function (event) {
+  if (window.event) {
+    event = window.event;
+  }
+  try {
+    var the = event.srcElement;
+    if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
+      return false;
+    }
+    return true;
+  } catch (e) {
+    return false;
+  }
+}
+//屏蔽复制
+
+//屏蔽剪切
+document.oncut = function (event) {
+  if (window.event) {
+    event = window.event;
+  }
+  try {
+    var the = event.srcElement;
+    if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")) {
+      return false;
+    }
+    return true;
+  } catch (e) {
+    return false;
+  }
+}
+//禁止f12
+
+function fuckyou() {
+  window.close(); //关闭当前窗口(防抽)
+  window.location = "about:blank"; //将当前窗口跳转置空白页
+}
+//禁止Ctrl+U
+var arr = [123, 17, 18];
+document.oncontextmenu = new Function("event.returnValue=false;"), //禁用右键
+
+  window.onkeydown = function (e) {
+    var keyCode = e.keyCode || e.which || e.charCode;
+    var ctrlKey = e.ctrlKey || e.metaKey;
+    console.log(keyCode + "--" + keyCode);
+    if (ctrlKey && keyCode == 85) {
+      e.preventDefault();
+    }
+    if (arr.indexOf(keyCode) > -1) {
+      e.preventDefault();
+    }
+  }
+
+function ck() {
+  console.profile();
+  console.profileEnd();
+  //我们判断一下profiles里面有没有东西，如果有，肯定有人按F12了，没错！！
+  if (console.clear) {
+    console.clear()
+  };
+  if (typeof console.profiles == "object") {
+    return console.profiles.length > 0;
+  }
+}
+
+function hehe() {
+  if ((window.console && (console.firebug || console.table && /firebug/i.test(console.table()))) || (
+      typeof opera ==
+      'object' && typeof opera.postError == 'function' && console.profile.length > 0)) {
+    fuckyou();
+  }
+  if (typeof console.profiles == "object" && console.profiles.length > 0) {
+    fuckyou();
+  }
+}
+hehe();
+window.onresize = function () {
+  if ((window.outerHeight - window.innerHeight) > 200)
+    //判断当前窗口内页高度和窗口高度，如果差值大于200，那么呵呵
+    fuckyou();
+}
+
+document.onkeydown = function (event) {
+  if ((event.keyCode == 112) || //屏蔽 F1
+    (event.keyCode == 113) || //屏蔽 F2
+    (event.keyCode == 114) || //屏蔽 F3
+    (event.keyCode == 115) || //屏蔽 F4
+    // (event.keyCode == 116) || //屏蔽 F5
+    (event.keyCode == 117) || //屏蔽 F6
+    (event.keyCode == 118) || //屏蔽 F7
+    (event.keyCode == 119) || //屏蔽 F8
+    (event.keyCode == 120) || //屏蔽 F9
+    (event.keyCode == 121) || //屏蔽 F10
+    (event.keyCode == 122) || //屏蔽 F11
+    (event.keyCode == 123)) //屏蔽 F12
+  {
+    return false;
+  }
+}
+window.onhelp = function () {
+  return false;
+}
+  } 
     </script>
 </head>
-<body>
-    <div id="bigDiv" style="height:600px;" class="online_3d_viewer"
-        model="cube_four_instances.3ds"
-        camera="3,1,2,0,0,0,0,0,1"
-        defaultcolor="200,0,0"
-        backgroundcolor="200,200,200"
-        edgesettings="on,0,0,0,1">
-    </div>
-	
-<script type="text/javascript"> 
-var a=document.getElementById("bigDiv").style.height=window.innerHeight
-</script>
-</body>
 
-</html>
+<body>
+    <input type="file" id="open_file" style="display:none;" multiple></input>
+    <div class="header" id="header">
+        <div class="title">
+     
+            <div class="title_right" id="header_buttons"></div>
+            <div class="main_file_name only_full_width" id="main_file_name"></div>
+        </div>
+        <div class="toolbar" id="toolbar"></div>
+    </div>
+    <div class="main" id="main">
+        <div class="main_navigator ov_panel_set_container only_full_width" id="main_navigator"></div>
+        <div class="main_splitter only_full_width" id="main_navigator_splitter"></div>
+        <div class="main_viewer" id="main_viewer"></div>
+        <div class="main_splitter only_full_width" id="main_sidebar_splitter"></div>
+        <div class="main_sidebar ov_panel_set_right_container only_full_width" id="main_sidebar"></div>
+    </div>
+    <div class="intro ov_thin_scrollbar" id="intro">
+       
+  
+    </div>
+</body>
+		</html>
