--- a/server/src/main/resources/static/pdfjs/web/viewer.html
+++ b/server/src/main/resources/static/pdfjs/web/viewer.html
@@ -1,25 +1,4 @@
 <!DOCTYPE html>
-<!--
-Copyright 2012 Mozilla Foundation
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-
-Adobe CMap resources are covered by their own copyright but the same license:
-
-    Copyright 1990-2015 Adobe Systems Incorporated.
-
-See https://github.com/adobe-type-tools/cmap-resources
--->
 <html dir="ltr" mozdisallowselectionprint>
   <head>
     <meta charset="utf-8">
@@ -222,10 +201,12 @@ See https://github.com/adobe-type-tools/cmap-resources
                 <span id="numPages" class="toolbarLabel"></span>
               </div>
               <div id="toolbarViewerRight">
+			  <button id="images"  onclick="changePreviewType('image')"  title="切换到JPG模式" tabindex="31" data-l10n-id="jpg">
+                  <span data-l10n-id="jpg">jpg</span>
+                </button>
                 <button id="presentationMode" class="toolbarButton presentationMode hiddenLargeView" title="Switch to Presentation Mode" tabindex="31" data-l10n-id="presentation_mode">
                   <span data-l10n-id="presentation_mode_label">Presentation Mode</span>
                 </button>
-
                 <button id="openFile" class="toolbarButton openFile hiddenLargeView" title="Open File" tabindex="32" data-l10n-id="open_file">
                   <span data-l10n-id="open_file_label">Open</span>
                 </button>
@@ -411,4 +392,22 @@ See https://github.com/adobe-type-tools/cmap-resources
     </div> <!-- outerContainer -->
     <div id="printContainer"></div>
   </body>
+  <script type="text/javascript" src="js/base64.min.js"></script>
+  <script>
+    function changePreviewType(previewType) {
+        var url = window.location.href;
+		var index = url.split('.pdf')[0];  
+		    index = index.split('=')[1]; 
+            index = index+'.pdf'; 
+			index = decodeURIComponent(index); 
+			index = encodeURIComponent(Base64.encode(index));
+		//window.alert(index);
+          url = "/onlinePreview?url="+index + "&officePreviewType="+previewType;
+		  console.log(url);
+		//  window.alert(url);
+		top.location.href=url;
+      //window.location.href = url;
+    }
+
+</script>
 </html>
