--- a/server/src/main/resources/static/ofd/index.html
+++ b/server/src/main/resources/static/ofd/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/cnofd.css">
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/jszip-utils-0.1.0.min.js"></script>
+   <script src="js/Typr.js"></script>
+  <script src="js/Typr.U.js"></script>
   <script src="js/cnofd.umd.min.js"></script>
 </head>
 
